--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "node" :"14.x",
+    "npm" : "6.x"
   }
 }
