--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.3.1"
+    "socket.io": "^4.3.1",
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
