--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my first socket.io app",
+  "name": "chatonline",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.3.1",
-    "node": "14.x",
-    "npm": "6.x"
+    "socket.io": "^4.4.0",
+    "node" :"14.x",
+    "npm" : "6.x"
   }
 }
